# holyproject

./: .gitignore  CMakeLists.txt  README.md
database/: CMakeLists.txt  database.c  database.h
parse/: CMakeLists.txt  parse.c  parse.h
server/: CMakeLists.txt  server.c  server.h
